@@ -229,6 +229,7 @@ info_get_or_remove_footnotes (WINDOW *window)
       old_active = active_window;
       active_window = last;
       fn_win = window_make_window (new_footnotes);
+      fn_win->flags |= W_TempWindow;
       active_window = old_active;
 
       if (!fn_win)
